<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/root_id"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:id="@+id/edit_weight"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/height_ft"
        android:id="@+id/edit_height_ft"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/height_inch"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_height_inch"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_text"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="11dp"
        android:id="@+id/btn"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_result"
        android:hint="@string/result_txt"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_marginTop="11dp"
        />

</LinearLayout>